--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://infutor.applytojob.com/apply/DI0ZLUgBbp/Senior-Product-Manager-Consumer-Identities'>Senior Product Manager, Consumer Identities - Infutor Data Solutions - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://infutor.applytojob.com/apply/mkwvPctkJG/Senior-Product-Manager-Consumer-Identities'>Senior Product Manager, Consumer Identities - Infutor Data Solutions - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://kochcareers.referrals.selectminds.com/jobs/product-manager-engineer-separation-technology-35731'>Product Manager/Engineer- Separation Technology - Koch Industries Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -64,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/oN0rbfw9'>Trek Bicycle Karrieren?Trip Design Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/oN0rbfw9'>Trek Bicycle Karrieren?Trip Design Product Manager</a></h5> 
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -94,7 +102,7 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzH9Vfw4&k=Job&j=oEG79fwk&__jvst=Employee&__jvsd=sysSTfwv&__jvsc=Twitter&bid=n2EfpMwB'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzH9Vfw4&k=Job&j=oEG79fwk&__jvst=Employee&__jvsd=sysSTfwv&__jvsc=Twitter&bid=n2EfpMwB'>Liferay, Inc. Careers - Product Designer</a></h5> 
 <p><span class="badge badge-light">Brazil</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -134,7 +142,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/product/senior-product-manager-experiences-1920470/?gh_src=82a8057f1'>Senior Product Manager, Experiences | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/product/senior-product-manager-experiences-1920470/?gh_src=82a8057f1'>Senior Product Manager, Experiences | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -154,7 +162,7 @@
 <p><span class="badge badge-light">Aveiro, Portugal Porto, Portugal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934913'>Job Application for Product Owner at Fuze</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1934913'>Job Application for Product Owner at Fuze</a></h5> 
 <p><span class="badge badge-light">Aveiro, Portugal Porto, Portugal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -210,7 +218,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://perkspot12.applytojob.com/apply/2BK9BoBS7a/Senior-Product-Manager'>Senior Product Manager - PerkSpot - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://perkspot12.applytojob.com/apply/2BK9BoBS7a/Senior-Product-Manager'>Senior Product Manager - PerkSpot - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -222,7 +230,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/product-manager-for-japanese-market-tad-10049'>Product Manager for Japanese Market : TAD - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/product-manager-for-japanese-market-tad-10049'>Product Manager for Japanese Market : TAD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -252,11 +260,11 @@
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/justicedigitalandtechnology/job/oPcsbfwo'>Justice Digital and Technology Careers - Senior Product Manager, London</a></h5> 
+<h5><a href='https://jobs.jobvite.com/justicedigitalandtechnology/job/oPcsbfwo'>Justice Digital and Technology Careers - Senior Product Manager, London</a></h5> 
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/justicedigitalandtechnology/job/olcsbfwU'>Justice Digital and Technology Careers - Lead Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/justicedigitalandtechnology/job/olcsbfwU'>Justice Digital and Technology Careers - Lead Product Manager</a></h5> 
 <p><span class="badge badge-light">London London  London  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -372,7 +380,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698460143-cdi-product-owner-crm-international-h-f-'>Groupe CANAL+ CDI - PRODUCT OWNER CRM INTERNATIONAL (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698460143-cdi-product-owner-crm-international-h-f-'>Groupe CANAL+ CDI - PRODUCT OWNER CRM INTERNATIONAL (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -380,7 +388,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mercari/jobs/4485106002'>Job Application for Product Designer at Mercari</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mercari/jobs/4485106002'>Job Application for Product Designer at Mercari</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -400,7 +408,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://prolific.breezy.hr/p/c23a0c793a9501-product-manager'>Product Manager at Prolific</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://prolific.breezy.hr/p/c23a0c793a9501-product-manager'>Product Manager at Prolific</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -447,14 +455,6 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <h5><a href='https://boards.greenhouse.io/tourlane/jobs/1937963'>Job Application for Senior Product Manager (f/m/x) - Supply Partner Onboarding at Tourlane</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oWbmafwn&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngbboMwh&jvi=oWbmafwn,Job&jvk=Job'>Medidata Solutions Careers - Senior Product Manager, Data Science</a></h5> 
-<p><span class="badge badge-light">New York, New York</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/thefork/jobs/1937495'>Job Application for Lead Product Designer H/F at The Fork</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
